# wt-project-web

./: CLAUDE.md  README.md  pyproject.toml
.claude/: .wt-version  settings.json
.claude/agents/: code-reviewer.md  gui-tester.md  openspec-verifier.md
.claude/commands/opsx/: apply.md  ff.md
.claude/commands/wt/: audit.md  plan-review.md  todo.md
.claude/rules/: wt-openspec-artifacts.md  wt-readme-updates.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-bulk-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-ff-change/: SKILL.md
.claude/skills/openspec-onboard/: SKILL.md
.claude/skills/openspec-sync-specs/: SKILL.md
.claude/skills/wt/: SKILL.md
openspec/changes/archive/2026-03-07-project-type-resolver/: design.md  proposal.md
openspec/changes/modular-templates-and-harvest/: design.md  proposal.md  tasks.md
openspec/changes/project-type-resolver/: tasks.md
openspec/changes/template-deploy/: design.md  proposal.md
openspec/changes/template-inheritance/: design.md  proposal.md  tasks.md
openspec/changes/web-knowledge-foundation/: tasks.md
openspec/specs/project-plugin-architecture/: spec.md
openspec/specs/rule-resolver/: spec.md
openspec/specs/web-verification-rules/: spec.md
wt/knowledge/lessons/: rule-feedback.yaml
wt/plugins/: project-type.yaml
wt_project_web/: __init__.py  base.py  cli.py  project_type.py
wt_project_web/templates/nextjs/: manifest.yaml  project-knowledge.yaml  tailwind.config.ts  tsconfig.json
wt_project_web/templates/spa/: manifest.yaml
(+22 files in other folders)
